Remove stuff that I clearly don't need yet.